Make "custom crate" text label match font for other labels.
Layout fixes for object selection panel.
fixed: Original forces checkbox should update when sim is paused.
# 1.03.12 (31256) May 3, 2009
5/3/09 Performance fixes for the game tab
# 1.03.11 (31234) May 1, 2009
5/1/09 minor fixes
# 1.03.10 (31217) May 1, 2009
5/1/09 bugfixes for rotation
# 1.03.09 (31213) May 1, 2009
5/1/09 Improvements for game model and coordinate frames 
# 1.03.08 (31211) May 1, 2009
5/1/09 Improvements for game model and coordinate frames
# 1.03.07 (31209) May 1, 2009
5/1/09 improvements for rotatable components and added energy model for game mode
# 1.03.06 (31153) Apr 29, 2009
4/29/09 Improvements for game mode.
# 1.03.05 (31088) Apr 28, 2009
4/28/09 Improvements to main and game modules
# 1.03.04 (31085) Apr 28, 2009
4/28/09 Improvements for main and game module
# 1.03.03 (30988) Apr 27, 2009
4/27/09 Deploy game module.
# 1.03.02 (30914) Apr 25, 2009
4/25/09 Many new features and bugfixes.
# 1.03.01 (30822) Apr 23, 2009
4/23/09 Improvements for FBD and Coordinate Frames
# 1.03.00 (30671) Apr 21, 2009
4/21/09 Batch deploy as part of IOM milestone with revision 30670
# 1.02.06 (30208) Apr 1, 2009
4/1/09 Deploy test version
# 1.02.05 (29902) Mar 25, 2009
3/25/09 Initial version of scala ramp
# 1.02.04 (29629) Mar 22, 2009
3/22/09 Batch deploy for Alpha Simulation Tests 2, svn 29628
# 1.02.03 (29335) Mar 9, 2009
# 1.02.02 (28823) Feb 19, 2009
Batch deploy for alpha Simulation Tests, svn 28773
10-13-2008: rename TheRampStrings to TheRampResources, move to top-level package, consistent with other sims
10-13-2008: replace SimString with PhetResources
10-13-2008: use PhetApplicationConfig launchSim
10-13-2008: fix incorrectly named string file for language=et
7-16-2007: Each module is given its own clock instead of sharing a reference.

New in 0.00.25 (8-18-2006)
Limited to 1 dog on screen at a time.
Renamed "remove heat" to "cool ramp"